--- a/calculator.html
+++ b/calculator.html
@@ -6,6 +6,18 @@
     <title>Circle-37 Calculator</title>
 </head>
 <body>
+    <div class="calc-container">
+        <div class="calculator">
+            <form>
+                <div class="display">
+                    <input type="text" name="display"/>
+
+                </div>
+            </form>
+
+        </div>
+
+    </div>
     
 </body>
 </html>
