--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Circle-37 Calculator</title>
+    <title>Circle-37 Calculator assignment</title>
 </head>
 <body>
     <div class="calc-container">
