--- a/calculator.html
+++ b/calculator.html
@@ -1,4 +1,19 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculator using javascript</title>
+     <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <form>
+        <div class="display">
+            <input type="text" name="display">
+        </div>
+    </form>
+</body>
+</html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
