--- a/calculator.html
+++ b/calculator.html
@@ -30,20 +30,20 @@
                         <div class="display"
                         ></div>
                         <div>
-                            <input type="button" value="7">
-                            <input type="button" value="8">
-                            <input type="button" value="9">
-                        </div>
-                        <div>
-                            <input type="button" value="4">
-                            <input type="button" value="5">
-                            <input type="button" value="6">
-                        </div>
-                        <div>
-                            <input type="button" value="1">
-                            <input type="button" value="2">
-                            <input type="button" value="3">
-                        </div>
+                            <input type="button" value="7" onclick="display.value += '7' ">
+                            <input type="button" value="8" onclick="display.value += '8' ">
+                            <input type="button" value="9" onclick="display.value += '9' ">
+                          </div>
+                          <div>
+                            <input type="button" value="4" onclick="display.value += '4' ">
+                            <input type="button" value="5" onclick="display.value += '5' ">
+                            <input type="button" value="6" onclick="display.value += '6' ">
+                          </div>
+                          <div>
+                            <input type="button" value="1" onclick="display.value += '1' ">
+                            <input type="button" value="2" onclick="display.value += '2' ">
+                            <input type="button" value="3" onclick="display.value += '3' ">
+                          </div>
                     </form>
                 </div>
             </form>
