--- a/calculator.html
+++ b/calculator.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-javascript-operators-igwegbe-Godwin
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,7 @@ javascript-operators-igwegbe-Godwin
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <form>
+        <div class="container">
             <div class="calculator">
                 <form>
                     <div class="display">
@@ -20,6 +19,13 @@ javascript-operators-igwegbe-Godwin
                         <input type="button" value="9" onclick="display.value += '9' ">
                          <!-- The subtraction operator gives us the difference between two or more arguments -->
                          <input type="button" value="-" onclick="display.value += '-' " class="operator">
+                    </div>                    
+                    <div>
+                        <input type="button" value="4" onclick="display.value += '4' ">
+                        <input type="button" value="5" onclick="display.value += '5' ">
+                        <input type="button" value="6" onclick="display.value += '6' ">
+                        <!-- The addition operator adds arguments together to get the sum -->
+                        <input type="button" value="+" onclick="display.value += '+' " class="operator">
                     </div>
                     <div>
                         <input type="button" value="4" onclick="display.value += '4' ">
@@ -43,7 +49,9 @@ javascript-operators-igwegbe-Godwin
                         <!-- Assigned the eval() method which returns the completion value of the code -->
                         <input type="button" value="=" onclick="display.value = eval(display.value)" class="equal operator">
                     </div>
-                </form>
+                </form>   
+                 <h4 class="circle-name">CIRCLE-37</h4>
             </div>
+        </div>
     </body>
-      </html>
+</html>
