--- a/calculator.html
+++ b/calculator.html
@@ -14,6 +14,10 @@
                         <input type="text" name="display"/>
                     </div>
                     <div>
+                        <input type="button" value="/"  onclick="display.value += '/' " class="operator"  >
+                        <input type="button" value="*" onclick="display.value += '*' " class="operator"  >
+                    </div>
+                    <div>
                         <input type="button" value="7" onclick="display.value += '7' ">
                         <input type="button" value="8" onclick="display.value += '8' ">
                         <input type="button" value="9" onclick="display.value += '9' ">
