--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calculator using javascript</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="calculator.css">
     </head>
     <body>
         <div class="container">
@@ -14,6 +14,13 @@
                         <input type="text" name="display"/>
                     </div>
                     <div>
+                        <input type="button" value="AC" onclick="display.value = '' " class="operator">
+                        <input type="button" value="DEL" onclick="display.value =  display.value.toString().slice(0,-1)" class="operator">
+                        <input type="button" value="/" onclick="display.value += '/' " class="operator">
+                        <input type="button" value="*" onclick="display.value += '*' " class="operator">
+                      </div>
+                    <div>
+                        
                         <input type="button" value="7" onclick="display.value += '7' ">
                         <input type="button" value="8" onclick="display.value += '8' ">
                         <input type="button" value="9" onclick="display.value += '9' ">
@@ -42,7 +49,7 @@
                         <input type="button" value="%" onclick="display.value += '%' " class="operator">
                     </div>
                     <div>
-                        <input type="button" value="3" onclick="display.value += '0' ">
+                        <input type="button" value="0" onclick="display.value += '0' ">
                             <!-- The decimal point is an element used to differentiated between an integer and 
                         a floating number -->
                         <input type="button" value="." onclick="display.value +=  '.' ">
