--- a/calculator.html
+++ b/calculator.html
@@ -46,7 +46,7 @@
                         a floating number -->
                         <input type="button" value="." onclick="display.value +=  '.' ">
                         <!-- Assigned the eval() method which returns the completion value of the code -->
-                        <input type="button" value="=" onclick="display.value = eval(display.value)" class="equal operator">
+                        <input type="button" value="=" onclick="display.value = eval(display.value)" class="equal_operator">
                     </div>
                 </form>   
                 <h4 class="circle-name">CIRCLE-37</h4>
